--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -2,6 +2,15 @@ name: Trigger auto deployment
 on:
   # 手動実行用トリガー
   workflow_dispatch: 
+  
+  # Add a trigger
+  # 自動実行用トリガー
+  push:
+    branches: 
+      [ main ]
+    paths:
+    - '**'
+
 # Add env
 env:
   CONTAINER_REGISTRY: acr230303aeu2svld3oam2.azurecr.io
